--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "TOKEN": "",
-    "ID": "",
-    "HASH": "",
+    "ID": "17584090",
+    "HASH": "3f779654fdd3b9278fd95869aabf4593",
     "Laravel_Session": "",
     "XSRF_TOKEN": "",
     "GDTot_Crypt": "",
